fix asset alignment

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -46,6 +46,7 @@
       height: 110px;
       width: 110px;
       word-wrap: break-word;
+      vertical-align: middle;
     }
     img.img-large {
       display: inline-block;
